--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="iniciarsesion.html">INICIAR SESION</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="registrarme.html">REGISTRARME</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">INFORMACION</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
