--- a/registrarme.html
+++ b/registrarme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <meta name= "keywords" content="ropa interior, lenceria, bombachas, conjuntos, bodys, comprar, carrito, iniciar sesion, mi sesion">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/estilos.css">
-    <title>I.M|Iniciar Sesion</title>
+    <title>I.M|Registrarme</title>
 </head>
 <body>
     <header>
@@ -45,27 +45,22 @@
             </div>
         </nav>
     </header>
-    <main>
-        <section class="iniciarSesion">
-            <h1>INICIAR SESION</h1>
-            <h3>REGISTRATE PARA CREAR TU SESION</h3>
-            <div id="registrate" class="text-center">
-                <form class="form-signin">
-                    <label for="inputEmail" class="sr-only">Email</label>
-                    <input type="email" id="input_email" class="form-control" placeholder="Email address" required autofocus>
-                    <label for="inputPassword" class="sr-only">Contraseña</label>
-                    <input type="password" id="input_password" class="form-control" placeholder="Password" required>
-                    <div class="checkbox mb-3">
-                    <label>
-                        <input type="checkbox" value="remember-me"> Recordarme 
-                    </label>
-                    </div>
-                    <button id= "btn_ingresar" class="btn btn--agua btn-lg btn-block" type="submit">Ingresar</button>
-                    <!-- <button  class="btn btn--agua btn-lg btn-block" type="submit">Registrarme</button> -->
-                </form>
-            </div>
-        </section>
-    </main>
+    <div class="formulario">
+        <h3>FORMULARIO DE REGISTRO</h3>
+        <form class="formularioRegistro">
+            <label for="">Nombre</label>    
+            <input id="inputNombre" type= text class="form-control" requiered autofocus><br>
+            <label for="">Apellido</label>
+            <input id="inputApellido" type="text" class="form-control" required autofocus><br>
+            <label for="">Edad</label>
+            <input id="inputEdad" type="text" class="form-control" required autofocus><br>
+            <label for="">Email</label>    
+            <input id ="inputEmail" type="email" class="form-control" requiered autofocus><br>    
+            <label for="">Contraseña</label>
+            <input  id="inputPassword" type="text" class="form-control" required autofocus><br>
+            <input  id="btn_registrarme" class="btn btn--gris" type="submit" value="finalizar registro">      
+        </form>  
+    </div>
     <footer>
         <div class="logo">
             <a href="index.html"><img class="imgLogo" src="multimedia/intima logo.png" alt="logo"></a>
