cambios en iniciar sesion y registrarme html e iniciarsesion_registrarme.js

--- a/iniciarsesion.html
+++ b/iniciarsesion.html
@@ -51,9 +51,9 @@
             <h3>REGISTRATE PARA CREAR TU SESION</h3>
             <div id="registrate" class="text-center">
                 <form class="form-signin">
-                    <label for="inputEmail" class="sr-only">Email</label>
+                    <label for="input_email" class="sr-only">Email</label>
                     <input type="email" id="input_email" class="form-control" placeholder="Email address" required autofocus>
-                    <label for="inputPassword" class="sr-only">Contraseña</label>
+                    <label for="input_password" class="sr-only">Contraseña</label>
                     <input type="password" id="input_password" class="form-control" placeholder="Password" required>
                     <div class="checkbox mb-3">
                     <label>
