nuevos cambios en iniciarsesion_registrarme.js

--- a/registrarme.html
+++ b/registrarme.html
@@ -47,7 +47,7 @@
     </header>
     <div class="formulario">
         <h3>FORMULARIO DE REGISTRO</h3>
-        <form class="formularioRegistro">
+        <form class="formularioRegistro" action=""onsubmit="registrar(event)">
             <label for="">Nombre</label>    
             <input id="inputNombre" type= text class="form-control" requiered autofocus><br>
             <label for="">Apellido</label>
@@ -58,7 +58,7 @@
             <input id="inputEmail" type="email" class="form-control" requiered autofocus><br>    
             <label for="">Contraseña</label>
             <input  id="inputPassword" type="text" class="form-control" required autofocus><br>
-            <input  id="btn_registrarme" class="btn btn--gris" type="submit" value="finalizar registro">      
+            <input  id="btn_registrarme" class="btn btn--gris" type="submit" value="finalizar registro">     
         </form>  
     </div>
     <footer>
